在回合开始时刷新玩家的装备