@@ -389,7 +389,7 @@ public class Match {
             .filter(e -> "T".equals(e.getValue().getTeam()))
             .map(e -> server.getPlayerList().getPlayer(e.getKey()))
             .filter(Objects::nonNull)
-            .collect(Collectors.toList()); // 使用 collect(Collectors.toList()) 保证兼容性
+            .toList(); 
 
         if (!tPlayers.isEmpty()) {
             ServerPlayer c4Carrier = tPlayers.get(new Random().nextInt(tPlayers.size()));
@@ -739,7 +739,7 @@ public class Match {
             .sorted(Comparator.comparingInt((Map.Entry<UUID, PlayerStats> e) -> e.getValue().getKills()).reversed()
             .thenComparingInt(e -> e.getValue().getDeaths()))
             .limit(15)
-            .collect(Collectors.toList());
+            .toList();
 
         for (Map.Entry<UUID, PlayerStats> entry : sortedPlayers) {
             ServerPlayer player = server.getPlayerList().getPlayer(entry.getKey());
@@ -807,9 +807,10 @@ public class Match {
             return;
         }
 
-        double minX = allPositions.get(0).getX();
-        double minY = allPositions.get(0).getY();
-        double minZ = allPositions.get(0).getZ();
+        double minX = allPositions.getFirst().getX();
+        double minY = allPositions.getFirst().getY();
+        double minZ = allPositions.getFirst().getZ();
+        
         double maxX = minX;
         double maxY = minY;
         double maxZ = minZ;
